@@ -14,7 +14,7 @@
 #undef APSTUDIO_READONLY_SYMBOLS
 
 /////////////////////////////////////////////////////////////////////////////
-// Englisch (USA) resources
+// English (U.S.) resources
 
 #if !defined(AFX_RESOURCE_DLL) || defined(AFX_TARG_ENU)
 #ifdef _WIN32
@@ -1425,56 +1425,64 @@ BEGIN
     EDITTEXT        314,63,34,55,12,ES_AUTOHSCROLL
 END
 
-IDD_PROPPRIMITIVE_POSITION DIALOGEX 0, 0, 125, 306
+IDD_PROPPRIMITIVE_POSITION DIALOGEX 0, 0, 125, 295
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    EDITTEXT        DISPID_POSITION_X,44,12,40,12,ES_AUTOHSCROLL
-    EDITTEXT        DISPID_POSITION_Y,44,26,40,12,ES_AUTOHSCROLL
-    EDITTEXT        DISPID_POSITION_Z,44,39,40,12,ES_AUTOHSCROLL
-    EDITTEXT        DISPID_SIZE_X,44,65,40,12,ES_AUTOHSCROLL
-    EDITTEXT        DISPID_SIZE_Y,44,79,40,12,ES_AUTOHSCROLL
-    EDITTEXT        DISPID_SIZE_Z,44,92,40,12,ES_AUTOHSCROLL
-    EDITTEXT        DISPID_AXISSCALE_XY,44,120,40,12,ES_AUTOHSCROLL
-    EDITTEXT        DISPID_AXISSCALE_XZ,44,134,40,12,ES_AUTOHSCROLL
-    EDITTEXT        DISPID_AXISSCALE_YX,44,148,40,12,ES_AUTOHSCROLL
-    EDITTEXT        DISPID_AXISSCALE_YZ,44,162,40,12,ES_AUTOHSCROLL
-    EDITTEXT        DISPID_AXISSCALE_ZX,44,176,40,12,ES_AUTOHSCROLL
-    EDITTEXT        DISPID_AXISSCALE_ZY,44,190,40,12,ES_AUTOHSCROLL
-    EDITTEXT        DISPID_ROTRA1,24,215,40,12,ES_AUTOHSCROLL
-    COMBOBOX        IDC_COMBO1,69,215,42,68,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        DISPID_ROTRA2,24,229,40,12,ES_AUTOHSCROLL
-    COMBOBOX        IDC_COMBO2,69,229,42,68,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        DISPID_ROTRA3,24,243,40,12,ES_AUTOHSCROLL
-    COMBOBOX        IDC_COMBO3,69,243,42,68,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        DISPID_ROTRA4,24,257,40,12,ES_AUTOHSCROLL
-    COMBOBOX        IDC_COMBO4,69,256,42,68,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        DISPID_ROTRA5,24,271,40,12,ES_AUTOHSCROLL
-    COMBOBOX        IDC_COMBO5,69,271,42,68,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        DISPID_ROTRA6,24,285,40,12,ES_AUTOHSCROLL
-    COMBOBOX        IDC_COMBO6,69,285,42,68,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "&X",IDC_STATIC,14,67,22,8
-    LTEXT           "&Y",IDC_STATIC,14,81,8,8
-    LTEXT           "&Z",IDC_STATIC,14,95,8,8
-    GROUPBOX        "Size",IDC_STATIC,7,56,111,55
-    LTEXT           "&X",IDC_STATIC,14,13,22,8
-    LTEXT           "&Y",IDC_STATIC,14,28,8,8
-    LTEXT           "&Z",IDC_STATIC,14,42,8,8
-    GROUPBOX        "Base Position",IDC_STATIC,7,3,111,53
-    LTEXT           "&X->Y",IDC_STATIC,14,122,22,8
-    LTEXT           "&X->Z",IDC_STATIC,14,136,18,8
-    LTEXT           "&Y->X",IDC_STATIC,14,150,25,8
-    GROUPBOX        "Axis Scale",IDC_STATIC,7,111,111,93
-    LTEXT           "1",IDC_STATIC,14,216,8,8
-    LTEXT           "2",IDC_STATIC,14,231,8,8
-    LTEXT           "3",IDC_STATIC,14,245,8,8
-    GROUPBOX        "Rotation and Transposition",IDC_STATIC,7,205,111,96
-    LTEXT           "4",IDC_STATIC,14,258,9,8
-    LTEXT           "5",IDC_STATIC,14,273,8,8
-    LTEXT           "6",IDC_STATIC,14,287,8,8
-    LTEXT           "&Y->Z",IDC_STATIC,14,164,22,8
-    LTEXT           "&Z->X",IDC_STATIC,14,178,24,8
-    LTEXT           "&Z->Y",IDC_STATIC,14,192,21,8
+    EDITTEXT        DISPID_POSITION_X,25,13,27,12,ES_AUTOHSCROLL
+    EDITTEXT        DISPID_POSITION_Y,25,27,27,12,ES_AUTOHSCROLL
+    EDITTEXT        DISPID_POSITION_Z,25,40,27,12,ES_AUTOHSCROLL
+    EDITTEXT        DISPID_SIZE_X,87,13,27,12,ES_AUTOHSCROLL
+    EDITTEXT        DISPID_SIZE_Y,87,27,27,12,ES_AUTOHSCROLL
+    EDITTEXT        DISPID_SIZE_Z,87,40,27,12,ES_AUTOHSCROLL
+    EDITTEXT        DISPID_AXISSCALE_XY,44,67,40,12,ES_AUTOHSCROLL
+    EDITTEXT        DISPID_AXISSCALE_XZ,44,81,40,12,ES_AUTOHSCROLL
+    EDITTEXT        DISPID_AXISSCALE_YX,44,95,40,12,ES_AUTOHSCROLL
+    EDITTEXT        DISPID_AXISSCALE_YZ,44,109,40,12,ES_AUTOHSCROLL
+    EDITTEXT        DISPID_AXISSCALE_ZX,44,123,40,12,ES_AUTOHSCROLL
+    EDITTEXT        DISPID_AXISSCALE_ZY,44,137,40,12,ES_AUTOHSCROLL
+    EDITTEXT        DISPID_ROTRA1,24,162,40,12,ES_AUTOHSCROLL
+    COMBOBOX        IDC_COMBO1,69,162,42,68,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        DISPID_ROTRA2,24,176,40,12,ES_AUTOHSCROLL
+    COMBOBOX        IDC_COMBO2,69,176,42,68,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        DISPID_ROTRA3,24,190,40,12,ES_AUTOHSCROLL
+    COMBOBOX        IDC_COMBO3,69,190,42,68,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        DISPID_ROTRA4,24,204,40,12,ES_AUTOHSCROLL
+    COMBOBOX        IDC_COMBO4,69,203,42,68,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        DISPID_ROTRA5,24,218,40,12,ES_AUTOHSCROLL
+    COMBOBOX        IDC_COMBO5,69,218,42,68,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        DISPID_ROTRA6,24,232,40,12,ES_AUTOHSCROLL
+    COMBOBOX        IDC_COMBO6,69,232,42,68,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "XSize",IDC_STATIC,64,15,23,8
+    LTEXT           "YSize",IDC_STATIC,64,28,23,8
+    LTEXT           "ZSize",IDC_STATIC,64,42,23,8
+    LTEXT           "&X",IDC_STATIC,14,15,10,8
+    LTEXT           "&Y",IDC_STATIC,14,28,10,8
+    LTEXT           "&Z",IDC_STATIC,14,42,10,8
+    GROUPBOX        "Base Position / Size",IDC_STATIC,7,3,111,53
+    LTEXT           "&X->Y",IDC_STATIC,14,69,22,8
+    LTEXT           "&X->Z",IDC_STATIC,14,83,18,8
+    LTEXT           "&Y->X",IDC_STATIC,14,97,25,8
+    GROUPBOX        "Axis Scale",IDC_STATIC,7,58,111,93
+    LTEXT           "1",IDC_STATIC,14,163,8,8
+    LTEXT           "2",IDC_STATIC,14,178,8,8
+    LTEXT           "3",IDC_STATIC,14,192,8,8
+    GROUPBOX        "Rotation and Transposition",IDC_STATIC,7,152,111,139
+    LTEXT           "4",IDC_STATIC,14,205,9,8
+    LTEXT           "5",IDC_STATIC,14,220,8,8
+    LTEXT           "6",IDC_STATIC,14,234,8,8
+    LTEXT           "&Y->Z",IDC_STATIC,14,111,22,8
+    LTEXT           "&Z->X",IDC_STATIC,14,125,24,8
+    LTEXT           "&Z->Y",IDC_STATIC,14,139,21,8
+    EDITTEXT        DISPID_ROTRA7,23,247,40,12,ES_AUTOHSCROLL
+    COMBOBOX        IDC_COMBO7,69,246,42,68,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        DISPID_ROTRA8,23,260,40,12,ES_AUTOHSCROLL
+    COMBOBOX        IDC_COMBO8,69,260,42,68,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        DISPID_ROTRA9,23,275,40,12,ES_AUTOHSCROLL
+    COMBOBOX        IDC_COMBO9,69,275,42,68,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "7",IDC_STATIC,13,248,9,8
+    LTEXT           "8",IDC_STATIC,13,263,8,8
+    LTEXT           "9",IDC_STATIC,13,276,8,8
 END
 
 IDD_PROPPRIMITIVE_VISUALS DIALOGEX 0, 0, 125, 168
@@ -2095,7 +2103,7 @@ BEGIN
     IDS_TB_COMCONTROL       "ActiveX"
 END
 
-#endif    // Englisch (USA) resources
+#endif    // English (U.S.) resources
 /////////////////////////////////////////////////////////////////////////////
 
 
